--- a/react-app/src/components/Splash/splash.css
+++ b/react-app/src/components/Splash/splash.css
@@ -49,3 +49,58 @@ form{
   left: 33%;
   width: 100%;
 }
+
+#all-news-container{
+  position: absolute;
+  width: 20%;
+  overflow-wrap: normal;
+  top: 30px;
+  right:13%;
+  background-color: #f1f4f5;
+  border-radius: 12px;
+}
+
+#each-news-container{
+  height: 80px;
+  padding-top: 11px;
+  padding-bottom: 11px;
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
+#each-news-container:hover{
+  background-color: #eeeeee;
+}
+
+#news-headline{
+  margin: 0;
+}
+
+#news-image-provider{
+  margin: 0;
+  font-size: x-small;
+}
+
+.news-buttons{
+  background-color: #f1f4f5;
+  height: 40px;
+  text-align: left;
+  border: 0;
+  color: rgb(38, 159, 240);
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.news-buttons:hover{
+  background-color: #eeeeee;
+  cursor: pointer;
+}
+
+#news-image{
+  height: 60px;
+  width: 60px;
+  border-radius: 12px;
+  position: relative;
+  left: 150%;
+  margin-left: 5px;
+}
