--- a/react-app/src/components/Splash/splash.css
+++ b/react-app/src/components/Splash/splash.css
@@ -1,3 +1,10 @@
+#splash-logged-in-header{
+  position: absolute;
+  top: 10px;
+  left: 33%;
+  margin-top: 0;
+}
+
 #chirp-user-container{
   display: flex;
 }
@@ -14,8 +21,11 @@
 }
 #each-chirp-container{
   width: 100%;
-
+  font-size: 12px;
   border-bottom: 1px solid #f1f4f5;
+  padding-bottom: 10px;
+  padding-top: 10px;
+  overflow-wrap: break-word;
 }
 
 #each-chirp-container:hover{
@@ -27,7 +37,7 @@
   flex-direction: column;
   width: 33%;
   position: absolute;
-  top: 100px;
+  top: 200px;
   left: 33%;
   overflow-wrap: normal;
   border-left: 1px solid #f1f4f5;
@@ -35,19 +45,93 @@
 
 }
 
+#splash-chirp-input{
+  align-self: flex-start;
+  display: block;
+  width: 80%;
+  font-family: Arial, Helvetica, sans-serif;
+  resize: none;
+  padding: 0%;
+  border: none;
+  margin-bottom: 10px;
+  height: 60px;
+  overflow-y:scroll;
+}
 
+#splash-chirp-input:focus{
+  outline: none;
+}
 
+#chirp-body{
+  width: 80%;
+  margin-left: 55px;
+  margin-top: 0;
+}
 
+#chirp-counter{
+ position: absolute;
+ bottom: 5px;
+ right:100px;
+ margin-bottom: 0;
+}
+
+#chirp-counter-close-to-limit{
+  position: absolute;
+ bottom: 5px;
+ right:100px;
+ margin-bottom: 0;
+ color: orange;
+}
+
+#chirp-counter-over-limit{
+  position: absolute;
+ bottom: 5px;
+ right:100px;
+ margin-bottom: 0;
+ color: red;
+}
 
 #chirp-input-button-contatiner{
   display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  width: 100%;
 }
 
 #add-chirp-form{
+  display: flex;
+  justify-content: space-between;
   position: absolute;
-  top: 10px;
+  top: 50px;
   left: 33%;
-  width: 100%;
+  width: 33%;
+  height: 10%;
+}
+
+#add-chirp-button{
+  width: 72px;
+  height: 34px;
+  border: none;
+  border-radius: 20px;
+  background-color: #1d9bf0;
+  color: white;
+  font-weight: bold;
+  position: absolute;
+  right: 5px;
+  bottom: 5px;
+}
+
+#add-chirp-button-disabled{
+  width: 72px;
+  height: 34px;
+  border: none;
+  border-radius: 20px;
+  background-color: #8ecdf7;
+  color: white;
+  font-weight: bold;
+  position: absolute;
+  right: 5px;
+  bottom: 5px;
 }
 
 #all-news-container{
@@ -111,4 +195,11 @@
 
 #news-text{
   width: 100%;
+}
+
+#add-chirp-profile-pic{
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  margin-right: 5px;
 }
