--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -2,11 +2,11 @@
 
 #side-bar-user-info-container{
   height: 800px;
-  width: 25%;
+  width: 20%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-items: flex-end;
+  align-items: center;
 }
 
 #navbar-profile-pic{
