--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -1,17 +1,61 @@
 /* TODO Add site wide styles */
 
 #side-bar-user-info-container{
-  height: 800px;
+  height: 600px;
   width: 20%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  list-style: none;
 }
 
 #navbar-profile-pic{
   height:80px;
   width: 80px;
+}
+
+#nav-home-logo{
+  height: 30px;
+  width: 30px;
+}
+
+#nav-home-birdhouse{
+  height: 30px;
+  width: 30px;
+}
+
+#nav-home-logo-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+}
+
+#nav-home-logo-container:hover{
+  background-color: #eeeeee;
+}
+
+#nav-home-birdhouse-container{
+  display: flex;
+  align-items: center;
+  height: 45px;
+  width: 120px;
+  border-radius: 20px;
+}
+
+#nav-home-birdhouse-container:hover{
+  background-color: #eeeeee;
+}
+
+#nav-home-birdhouse-words{
+  font-size: large;
+  font-weight: bold;
+  margin-left: 20px;
+  position: relative;
+  bottom: 7px;
 }
 
 body{
