--- a/react-app/src/components/Splash/splash.css
+++ b/react-app/src/components/Splash/splash.css
@@ -220,3 +220,107 @@
   color: white;
   font-weight: bold;
 }
+
+#splash-graffiti-logo{
+  width: 55%;
+  height: 800px;
+  margin: 0;
+  padding: 0;
+}
+
+#white-bird-logo{
+  position: absolute;
+  height: 400px;
+  width: 400px;
+  left: 16%;
+  top: 30%;
+}
+
+#user-auth-side{
+  width: 42%;
+  height: 800px;
+  position: absolute;
+  right:0;
+  top:0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: flex-start;
+
+}
+
+#user-auth-home-logo{
+  height: 40px;
+  width: 40px;
+}
+
+#sign-up-demo-container{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  height: 40%;
+  width: 50%;
+}
+
+#user-auth-section-headers{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+#chipper-main-logo{
+  font-size: 60px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight:900;
+}
+
+#signup-button{
+  width: 100%;
+  height: 34px;
+  border: 2px solid #eeeeee;
+  background-color: white;
+  border-radius: 20px;
+  transition-duration: .2s;
+}
+
+#signup-button:hover{
+  background-color: #eeeeee;
+  border: 2px solid #dcdcdc;
+}
+
+#demo-button{
+  width: 100%;
+  height: 34px;
+  border: 2px solid #eeeeee;
+  background-color: #269ff0;
+  color: white;
+  font-weight: bold;
+  border-radius: 20px;
+  transition-duration: .2s;
+}
+
+#demo-button:hover{
+  background-color: #1A8CD8;
+}
+
+#login-section{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 50%;
+}
+
+#login-button{
+  width: 100%;
+  height: 34px;
+  border: 2px solid #eeeeee;
+  background-color: white;
+  color: #269ff0;
+  font-weight: bold;
+  border-radius: 20px;
+  transition-duration: .2s;
+}
+
+#login-button:hover{
+  background-color: #E8F5FD;
+}
