--- a/react-app/src/components/Splash/splash.css
+++ b/react-app/src/components/Splash/splash.css
@@ -25,7 +25,7 @@
   height: fit-content;
   font-size: 14px;
   border-bottom: 1px solid #f1f4f5;
-  padding: 15px;
+  padding: 20px;
   padding-top: 5px;
   overflow-wrap: break-word;
   box-sizing: border-box;
@@ -50,12 +50,14 @@
 #splash-chirp-input{
   align-self: flex-start;
   display: block;
-  width: 80%;
+  width: 90%;
   font-family: Arial, Helvetica, sans-serif;
   resize: none;
   padding: 0%;
   border: none;
   margin-bottom: 10px;
+  margin-left: 3%;
+  margin-top: 1%;
   height: 65%;
   overflow-y:auto;
 }
@@ -67,7 +69,8 @@
 #chirp-body{
   width: 80%;
   margin-left: 55px;
-  margin-top: 0;
+  margin-top: 1%;
+  margin-bottom: 3%;
 }
 
 #chirp-counter{
@@ -223,7 +226,7 @@
 
 #splash-graffiti-logo{
   width: 55%;
-  height: 800px;
+  max-height: 900px;
   margin: 0;
   padding: 0;
 }
