--- a/react-app/src/components/EachChirp/eachChirp.css
+++ b/react-app/src/components/EachChirp/eachChirp.css
@@ -5,10 +5,11 @@
 #chirp-and-comments-container{
   display: flex;
   flex-direction: column;
-  width: 33%;
+  width: 39.5%;
+  height: 100%;
   position: absolute;
-  top: 200px;
-  left: 33%;
+  top: 29%;
+  left: 26.5%;
   overflow-wrap: normal;
   border-left: 1px solid #f1f4f5;
   border-right: 1px solid #f1f4f5;
@@ -16,6 +17,13 @@
 
 #each-chirp-user-container{
   display: flex;
+}
+
+#each-chirp-body{
+  width: 80%;
+  margin-left: 55px;
+  margin-top: 1%;
+  margin-bottom: 3%;
 }
 
 #each-chirp-go-back-button{
@@ -42,11 +50,13 @@
 
 #chirp-container{
   width: 100%;
-  font-size: 12px;
+  height: fit-content;
+  font-size: 14px;
   border-bottom: 1px solid #f1f4f5;
-  padding-bottom: 10px;
-  padding-top: 10px;
+  padding: 20px;
+  padding-top: 5px;
   overflow-wrap: break-word;
+  box-sizing: border-box;
 }
 
 #chirp-container:hover{
@@ -57,7 +67,7 @@
   width: 33%;
   padding: 10px;
   position: absolute;
-  top: 250px;
+  top: 500px;
   left: 33%;
   overflow-wrap: normal;
   border-left: 1px solid #f1f4f5;
@@ -70,9 +80,14 @@
   justify-content: space-between;
   position: absolute;
   top: 50px;
-  left: 33%;
-  width: 33%;
-  height: 17%;
+  left: 26.5%;
+  width: 39.5%;
+  height: 22%;
+  border-left: 1px solid #f1f4f5;
+  border-right: 1px solid #f1f4f5;
+  border-bottom: 1px solid #f1f4f5;
+  padding: 10px;
+  box-sizing: border-box;
 }
 
 #edit-chirp-button{
@@ -93,8 +108,9 @@
   flex-direction: row-reverse;
   height: 20px;
   position: absolute;
-  top: 0;
-  left: 33%;
+  top: 10px;
+  left: 27%;
+  margin-top: 0;
 }
 
 #each-main-title{
@@ -123,21 +139,24 @@ a{
 #edit-chirp-input{
   align-self: flex-start;
   display: block;
-  width: 80%;
+  width: 90%;
   font-family: Arial, Helvetica, sans-serif;
   resize: none;
   padding: 0%;
   border: none;
   margin-bottom: 10px;
-  height: 60px;
-  overflow-y: auto;
+  margin-left: 3%;
+  margin-top: 1%;
+  margin-right: 6%;
+  height: 65%;
+  overflow-y:auto;
 }
 
 #edit-chirp-input:focus{
   outline: none;
 }
 
-#edit-chirp-profile-pic{
+.chirp-form-profile-pics{
   height: 50px;
   width: 50px;
   border-radius: 50%;
@@ -174,7 +193,7 @@ a{
  color: red;
 }
 
-#edit-chirp-submit-button{
+.chirp-submit-buttons{
   width: 72px;
   height: 34px;
   border: none;
@@ -211,4 +230,34 @@ a{
   position: absolute;
   right: 5px;
   bottom: 5px;
+}
+
+#chirp-reply-input{
+  align-self: flex-start;
+  display: block;
+  width: 90%;
+  font-family: Arial, Helvetica, sans-serif;
+  resize: none;
+  padding: 0%;
+  border: none;
+  margin-bottom: 10px;
+  margin-left: 3%;
+  margin-top: 1%;
+  margin-right: 6%;
+  height: 65%;
+  overflow-y:auto;
+}
+
+#chirp-reply-form{
+  display: flex;
+  justify-content: space-between;
+  position: absolute;
+  top: 25%;
+  width:100%;
+  height: 22%;
+  border-left: 1px solid #f1f4f5;
+  border-right: 1px solid #f1f4f5;
+  border-bottom: 1px solid #f1f4f5;
+  padding: 10px;
+  box-sizing: border-box;
 }
