--- a/react-app/src/components/EachChirp/eachChirp.css
+++ b/react-app/src/components/EachChirp/eachChirp.css
@@ -1,7 +1,6 @@
 #chirp-and-comments-container{
   position: absolute;
-  min-height: fit-content;
-  height: 40%;
+  height: 55%;
   display: flex;
   flex-direction: column;
   left: 26.5%;
@@ -18,6 +17,7 @@
   flex-direction: column;
   width: 100%;
   height: fit-content;
+  min-height: 200px;
   font-size: 14px;
   border-bottom: 1px solid #f1f4f5;
   padding: 20px;
@@ -63,9 +63,9 @@
 
 
 #edit-comment-button{
-  position: absolute;
-  top: 31%;
-  right: 5%;
+  position: relative;
+  bottom: 6px;
+  left: 475px;
   width: 72px;
   height: 34px;
   border: none;
@@ -73,12 +73,17 @@
   background-color: #1d9bf0;
   color: white;
   font-weight: bold;
-
 }
+
+#edit-comment-button-disabled{
+  background-color: #8ecdf7;
+}
+
+
 #edit-chirp-button{
   position: absolute;
   right: 5%;
-  top: 27%;
+  top: 38%;
   width: 72px;
   height: 34px;
   border: none;
@@ -171,6 +176,10 @@ a{
   margin-top: 1%;
   height: 65%;
   overflow-y:auto;
+}
+
+#edit-comment-input:focus{
+  outline: none;
 }
 
 
