--- a/react-app/src/components/EachChirp/eachChirp.css
+++ b/react-app/src/components/EachChirp/eachChirp.css
@@ -1,6 +1,6 @@
 #chirp-and-comments-container{
   position: absolute;
-  height: 55%;
+  height: 35%;
   display: flex;
   flex-direction: column;
   left: 26.5%;
@@ -17,12 +17,11 @@
   flex-direction: column;
   width: 100%;
   height: fit-content;
-  min-height: 200px;
+  min-height: 150px;
   font-size: 14px;
   border-bottom: 1px solid #f1f4f5;
   padding: 20px;
   padding-top: 5px;
-  padding-bottom: 45px;
   overflow-wrap: break-word;
   box-sizing: border-box;
   margin-bottom: 20px;
@@ -65,7 +64,7 @@
 #edit-comment-button{
   position: relative;
   bottom: 6px;
-  left: 475px;
+  left: 85%;
   width: 72px;
   height: 34px;
   border: none;
@@ -73,6 +72,7 @@
   background-color: #1d9bf0;
   color: white;
   font-weight: bold;
+  margin-right: 60%;
 }
 
 #edit-comment-button-disabled{
@@ -83,7 +83,7 @@
 #edit-chirp-button{
   position: absolute;
   right: 5%;
-  top: 38%;
+  top: 0%;
   width: 72px;
   height: 34px;
   border: none;
@@ -113,7 +113,7 @@
 }
 
 #chirp-reply-form{
-  margin-top: 50px;
+  margin-top: 40px;
   height: 180px;
   max-height: 180px;
   flex-grow: 0;
@@ -124,7 +124,7 @@
 #chirp-reply-input{
   align-self: flex-start;
   display: block;
-  width: 90%;
+  width: 80%;
   font-family: Arial, Helvetica, sans-serif;
   resize: none;
   padding: 0%;
@@ -132,11 +132,11 @@
   margin-bottom: 10px;
   margin-left: 3%;
   margin-top: 1%;
-  height: 65%;
+  height: 75%;
   overflow-y:auto;
   position: relative;
-  left: 6%;
-  bottom: 50%;
+  left: 8%;
+  bottom: 70%;
 }
 
 #chirp-reply-input:focus{
@@ -336,6 +336,7 @@ a{
 #comment-list{
   list-style: none;
   padding: 10%;
+  padding-top: 5%;
   padding-left: 3%;
   border-left: 1px solid #f1f4f5;
   border-right: 1px solid #f1f4f5;
