--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -187,3 +187,10 @@ button:hover{
 #news-text{
   width: 100%;
 }
+
+.pagenotfound-container{
+  text-align: center;
+  position: absolute;
+  top: 5%;
+  left: 36%;
+}
