--- a/react-app/src/components/EachChirp/eachChirp.css
+++ b/react-app/src/components/EachChirp/eachChirp.css
@@ -369,13 +369,15 @@ a{
 .like-heart-icons{
   height: 20px;
   width: 20px;
+
 }
 
 .like-buttons{
-  height: 30px;
-  width: 30px;
+  height: 20px;
+  width: 20px;
   background-color: transparent;
   border: none;
+  margin-right: 10px;
 }
 
 .like-button-containers{
