--- a/react-app/src/components/EachChirp/eachChirp.css
+++ b/react-app/src/components/EachChirp/eachChirp.css
@@ -396,3 +396,12 @@ a{
   align-items: center;
   font-weight: bold;
 }
+
+.each-comment-count-container{
+  position: absolute;
+  top: 39%;
+  right: 30%;
+  display: flex;
+  align-items: center;
+  font-weight: bold;
+}
