--- a/react-app/src/components/Splash/splash.css
+++ b/react-app/src/components/Splash/splash.css
@@ -308,3 +308,25 @@
 #login-button:hover{
   background-color: #E8F5FD;
 }
+
+#add-chirp-media-button{
+  height: 20px;
+  width: 20px;
+  border-radius: 15%;
+}
+
+#add-media-button-container{
+  position: absolute;
+  bottom: 5px;
+  left: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 35px;
+  width: 35px;
+  border-radius: 50%;
+}
+
+#add-media-button-container:hover{
+  background-color:#eeeeee;
+}
