--- a/react-app/src/components/EachChirp/eachChirp.css
+++ b/react-app/src/components/EachChirp/eachChirp.css
@@ -9,7 +9,6 @@
   overflow-wrap: break-word;
   border-left: 1px solid #f1f4f5;
   border-right: 1px solid #f1f4f5;
-  border-bottom: 1px solid #f1f4f5;
 }
 
 #chirp-container{
@@ -17,7 +16,7 @@
   flex-direction: column;
   width: 100%;
   height: fit-content;
-  min-height: 150px;
+  min-height: fit-content;
   font-size: 14px;
   border-bottom: 1px solid #f1f4f5;
   padding: 20px;
@@ -32,6 +31,7 @@
   margin-left: 55px;
   margin-top: 1%;
   margin-bottom: 3%;
+  font-size: large;
 }
 
 #each-chirp-user-container{
@@ -120,6 +120,31 @@
   padding-left: 3%;
 }
 
+#chirp-reply-form-container{
+  box-sizing: border-box;
+  margin-top: 10px;
+  margin-bottom: 20px;
+  border-left: 1px solid #f1f4f5;
+  border-right: 1px solid #f1f4f5;
+  border-bottom: 1px solid #f1f4f5;
+}
+
+#chirp-reply-button{
+  position: relative;
+  left: 85%;
+  bottom: 6em;
+
+}
+
+#chirp-reply-button-disabled{
+  position: relative;
+  left: 87%;
+  bottom: 6em;
+
+
+  background-color: #8ecdf7;
+}
+
 
 #chirp-reply-input{
   align-self: flex-start;
@@ -136,7 +161,7 @@
   overflow-y:auto;
   position: relative;
   left: 8%;
-  bottom: 70%;
+  bottom: 30%;
 }
 
 #chirp-reply-input:focus{
@@ -273,48 +298,37 @@ a{
 
 
 #comment-counter{
-  position: absolute;
-  bottom: 5px;
-  right:100px;
+  position: relative;
+  left: 72%;
+  bottom: 3em;
   margin-bottom: 0;
 }
 
 #comment-counter-zero{
-  position: absolute;
-  bottom: 5px;
-  right:100px;
+  position: relative;
+  left: 30%;
+  bottom: 3em;
   margin-bottom: 0;
   color: red;
 }
 
 #comment-counter-close-to-limit{
-  position: absolute;
-  bottom: 5px;
-  right:100px;
+  position: relative;
+  left: 72%;
+  bottom: 3em;
   margin-bottom: 0;
   color: orange;
 }
 
 #comment-over-limit{
-  position: absolute;
-  bottom: 5px;
-  right:100px;
+  position: relative;
+  left: 20%;
+  bottom: 3em;
   margin-bottom: 0;
   color: red;
 }
 
-#chirp-reply-button{
-  position: absolute;
-  bottom: 1%;
-  right: 1%;
-}
 
-#chirp-reply-button-disabled{
-  position: absolute;
-  bottom: 1%;
-  right: 1%;
-  background-color: #8ecdf7;
-}
 
 #comment-container{
   position: relative;
@@ -326,6 +340,15 @@ a{
   height: 50px;
   width: 50px;
   border-radius: 50%;
+}
+
+#comment-username{
+  font-weight:bold;
+  padding-bottom: 2%;
+}
+
+#comment-replying-to{
+  font-size: 12px;
 }
 
 #all-comments{
@@ -346,12 +369,18 @@ a{
   display: flex;
 }
 
+#comment-users-list{
+  list-style: none;
+  margin-left: 2%;
+}
+
 #each-comment{
   margin-bottom: 10%;
   border-bottom: 1px solid #f1f4f5;
 }
 
 #comment-body{
+  font-size: small;
   padding-left: 10%;
   padding-bottom: 5%;
 }
@@ -367,41 +396,77 @@ a{
 }
 
 .like-heart-icons{
-  height: 20px;
-  width: 20px;
-
+  height: 15px;
+  width: 15px;
 }
 
 .like-buttons{
-  height: 20px;
-  width: 20px;
+  position: relative;
+  left: 20%;
+  top: 1%;
+  height: 15px;
+  width: 15px;
   background-color: transparent;
   border: none;
   margin-right: 10px;
+}
+
+.like-buttons-divs{
+  position: relative;
+  bottom: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 30px;
+  width: 30px;
+  border-radius: 50%;
+}
+
+.like-buttons-divs:hover{
+  background-color: #ffdded;
 }
 
 .like-button-containers{
   left: 30%;
   position: absolute;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   font-weight: bold;
+}
+
+#like-count-not-liked{
+  position: relative;
+  bottom: .25em;
+  color: black;
+}
+
+#like-count-liked{
+  position: relative;
+  bottom: .25em;
+  color: #f91880;
 }
 
 .each-like-button-containers{
   position: absolute;
   top: 39%;
-  left: 30%;
+  left: 20%;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   font-weight: bold;
 }
 
 .each-comment-count-container{
   position: absolute;
   top: 39%;
-  right: 30%;
+  right: 20%;
   display: flex;
   align-items: center;
   font-weight: bold;
+}
+
+#like-comment-outer-container{
+  display: flex;
+  justify-content: space-around;
+  position:sticky;
+  bottom: 5px;
 }
