--- a/react-app/src/components/Splash/splash.css
+++ b/react-app/src/components/Splash/splash.css
@@ -80,17 +80,17 @@
 #chirp-body{
   position: relative;
   bottom: 15px;
-  width: 80%;
-  margin-left: 55px;
+  max-width: 80%;
+  margin-left: 16%;
   margin-top: 1%;
   margin-bottom: 3%;
 }
 
 #chirp-media{
   max-height: 300px;
-  max-width: 80%;
+  max-width: 70%;
   margin-bottom: 3%;
-  margin-left: 55px;
+  margin-left: 16%;
   border-radius: 12px;
 }
 
@@ -322,6 +322,7 @@
   height: 20px;
   width: 20px;
   border-radius: 15%;
+  transition-delay: 1s;
 }
 
 #add-media-button-container{
