--- a/react-app/src/components/Splash/splash.css
+++ b/react-app/src/components/Splash/splash.css
@@ -17,6 +17,11 @@
   text-decoration: underline;
 }
 
+#chirp-user-username{
+  margin-left: 1%;
+  color: gray;
+}
+
 
 #chirp-user-image{
   height: 50px;
