--- a/react-app/src/components/Splash/splash.css
+++ b/react-app/src/components/Splash/splash.css
@@ -201,7 +201,7 @@
 
 #splash-graffiti-logo{
   width: 55%;
-  height: 100vh;
+  height: 92vh;
   margin: 0;
   padding: 0;
 }
@@ -216,7 +216,8 @@
 
 #user-auth-side{
   width: 42%;
-  height: 800px;
+  height: 80vh;
+  max-height: 80vh;
   position: absolute;
   right:0;
   top:0;
@@ -267,6 +268,10 @@
   font-weight:900;
 }
 
+#join-chipper-header{
+  margin-bottom:20px;
+}
+
 #signup-button{
   width: 100%;
   height: 34px;
@@ -279,6 +284,11 @@
 #signup-button:hover{
   background-color: #eeeeee;
   border: 2px solid #dcdcdc;
+}
+
+#sign-up-demo-container{
+  padding-top: 5%;
+  padding-bottom: 10%;
 }
 
 #signup-demo-sep{
@@ -300,6 +310,11 @@
 
 #demo-button:hover{
   background-color: #1A8CD8;
+}
+
+#splash-terms-of-service{
+  font-size: 10px;
+  margin-top: 2%;
 }
 
 #login-section{
@@ -361,4 +376,38 @@
   position: absolute;
   bottom: 5px;
   left: 80px;
+}
+
+#copyright-symbol{
+  height: 12px;
+  width:12px;
+  margin-right: 5px;
+}
+
+#footer-container{
+  display: flex;
+  flex-direction: column;
+  color:rgb(117, 117, 117);
+}
+
+#footer-links{
+  margin-top:10px;
+  display: flex;
+  width: 90vw;
+  justify-content: space-evenly;
+  padding-left: 4vw;
+  padding-right: 4vw;
+  font-size: 12px;
+}
+
+#footer-copyright{
+  margin-bottom: 10px;
+  margin-top: 5px;
+  display: flex;
+  width: 90vw;
+  padding-left: 4vw;
+  padding-right: 4vw;
+  justify-content: center;
+  align-items: center;
+  font-size: 12px;
 }
