followers tab now updates as intended on profile page

--- a/react-app/src/components/userProfile/userProfile.css
+++ b/react-app/src/components/userProfile/userProfile.css
@@ -176,6 +176,10 @@
   overflow-wrap: break-word;
 }
 
+#profile-follow-container:hover{
+  background-color: #eeeeee;
+}
+
 #profile-follower-image{
   height: 50px;
   width: 50px;
