--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -159,11 +159,8 @@ button:hover{
 #news-headline{
   margin: 0;
   margin-top: 10px;
-}
-
-#news-image-provider{
-  margin: 0;
-  font-size: x-small;
+  padding-bottom: 5px;
+  font-size: 14px;
 }
 
 .news-buttons{
@@ -202,10 +199,10 @@ button:hover{
 }
 
 #news-sub-header{
-  padding-top: 15px;
+  margin-top: 10px;
   box-sizing: border-box;
   text-align: left;
-  font-size: small;
+  font-size:x-small;
 }
 
 .pagenotfound-container{
