--- a/react-app/src/components/userProfile/userProfile.css
+++ b/react-app/src/components/userProfile/userProfile.css
@@ -82,6 +82,12 @@
   font-size: medium;
 }
 
+#user-profile-bio{
+  width: 90%;
+  margin-top: 20px;
+  font-size: small;
+}
+
 #profile-edit-chirp-container{
   position: relative;
   left: 5%;
