--- a/react-app/src/components/giphyModal/giphyModal.css
+++ b/react-app/src/components/giphyModal/giphyModal.css
@@ -1,6 +1,6 @@
 #each-gif-image{
-  width: 20%;
-  height: 20%;
+  width: 40%;
+  height: auto;
   margin: 1%;
   border-radius: 5px;
 }
@@ -15,4 +15,30 @@
   height: 80%;
   justify-content: space-evenly;
   align-items: center;
+  overflow-y: auto;
+}
+
+#add-giphy-button{
+  position: absolute;
+  bottom: 5px;
+  left: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 35px;
+  width: 35px;
+  border-radius: 50%;
+  border: none;
+  background-color: transparent;
+}
+
+#add-giphy-image{
+  height: 20px;
+  width: 20px;
+  border-radius: 15%;
+  transition-delay: 1s;
+}
+
+#add-giphy-button:hover{
+  background-color:#eeeeee;
 }
