--- a/react-app/src/components/giphyModal/giphyModal.css
+++ b/react-app/src/components/giphyModal/giphyModal.css
@@ -12,10 +12,31 @@
   bottom: 5%;
   width: 80%;
   margin-left: 10%;
-  height: 80%;
+  height: 70%;
   justify-content: space-evenly;
   align-items: center;
   overflow-y: auto;
+}
+
+#add-gif-header{
+  text-align: center;
+  margin-bottom: 2%;
+}
+
+#gif-search-field{
+  width: 50%;
+  position: absolute;
+  left: 25%;
+  height: 30px;
+  font-size: large;
+  border-radius: 12px;
+  padding-left: 1%;
+  padding-right: 1%;
+  border: 1px solid grey;
+}
+
+#gif-search-field:focus{
+  border: 2px solid black;
 }
 
 #add-giphy-button{
